# usb-recording

./: Cargo.toml  INSTALL.txt  README.txt  default.nix  shell.nix
src/: audio.rs  main.rs  pcm2wav.rs  pcmdump.rs  state.rs  usbctrl.rs
whisper-cpp/: SOURCE.txt
