[package]
name = "respeaker-record"
version = "0.2.0"
edition = "2021"

[dependencies]
rusb = "0.9"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"
alsa = "0.9"     # Direct ALSA interaction
clap = { version = "4.5.53", features = ["derive"] }

[profile.release]
strip = true
lto = true
